# stock-research

./: .gitignore  EVALUATION.md  GITHUB_ACTIONS_SETUP.md  README.md  analyze_market.py  build_site.py  pyproject.toml  requirements.txt
.github/workflows/: daily-analysis.yml  daily-market-research.yml
config/: default.yaml
examples/: __init__.py  simple_momentum_strategy.py
results/: SUMMARY.md  alpha_rankings.csv  alpha_rankings_20260119_184606.csv  alpha_rankings_20260131_224925.csv  latest.json  market_analysis_20260119_184606.json  market_analysis_20260131_224925.json
results/2026-01-31/: SUMMARY.md
results/2026-02-03/: SUMMARY.md  alpha_rankings.csv  analysis.json
results/2026-02-04/: SUMMARY.md  alpha_rankings.csv  analysis.json
results/2026-02-05/: SUMMARY.md  alpha_rankings.csv  analysis.json
results/2026-02-06/: SUMMARY.md  alpha_rankings.csv  analysis.json
scripts/: send_email.py
src/: __init__.py
src/alpha/: __init__.py  composite.py  factors.py
src/backtest/: __init__.py  engine.py  metrics.py  portfolio.py
src/data/: __init__.py  fundamentals.py  market_data.py  sentiment.py
src/signals/: __init__.py  breakout.py  momentum.py  trend_detector.py
src/utils/: __init__.py  helpers.py
tests/: __init__.py  test_alpha_factors.py  test_momentum.py  test_signals.py
