[project]
name = "stock-research"
version = "1.0.0"
description = "Market research framework for stock selection focused on capturing trends to maximize alpha"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Data Collection
    "yfinance>=0.2.36",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    # Configuration
    "pyyaml>=6.0",
    # Utilities
    "tqdm>=4.65.0",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

jupyter = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
]

premium = [
    # Optional: Premium data sources (require API keys)
    # "polygon-api-client>=1.12.0",  # Polygon.io
    # "alpaca-py>=0.13.0",           # Alpaca Markets
]

ml = [
    # Machine Learning (optional, for advanced alpha)
    # "scikit-learn>=1.3.0",
    # "xgboost>=2.0.0",
    # "ta>=0.10.0",  # Technical analysis library
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
